# Cmd-K

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  test-windows.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v0.2.1-MILESTONE-AUDIT.md  v0.3.11-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: cursor-multi-tab-same-pid.md  multi-tab-shell-disambiguation.md  windows-opaque-overlay.md  wsl-detection-failure.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v0.1.1-MILESTONE-AUDIT.md  v0.1.1-REQUIREMENTS.md  v0.1.1-ROADMAP.md  v0.2.1-REQUIREMENTS.md  v0.2.4-REQUIREMENTS.md  v0.2.4-ROADMAP.md  v0.2.6-REQUIREMENTS.md  v0.2.7-REQUIREMENTS.md  v0.2.7-ROADMAP.md  v0.2.8-REQUIREMENTS.md  v0.2.8-ROADMAP.md  v0.3.11-REQUIREMENTS.md  v0.3.9-REQUIREMENTS.md  v0.3.9-ROADMAP.md  v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/milestones/v0.2.1-phases/: 12-VERIFICATION.md  13-VERIFICATION.md  14-VERIFICATION.md  15-VERIFICATION.md  16-VERIFICATION.md
.planning/phases/01-foundation-overlay/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-RESEARCH.md
.planning/phases/01-merge-windows-branch-resolve-conflicts-and-ensure-platform-independent-builds/: 01-01-PLAN.md  01-02-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-settings-configuration/: 02-01-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cli/: ai.js  main.js  package-lock.json  package.json  preload.js
cli/renderer/: app.js  index.html  style.css
docs/: ci-secrets-setup.md  paste-mechanism.md  windows-ci-build.md
extension/: .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  XAI_MODELS.md  package-lock.json  package.json
extension/src/: config.ts  contextBuilder.ts  extension.ts  terminalManager.ts
extension/website/: index.html  script.js  styles.css
misc/: invert_logo.py
scripts/: build-dmg.sh  build-pkg.sh  build-windows.sh
showcase/: index.html  privacy.html
showcase/css/: home.css  main.css  privacy.css
showcase/js/: demo.js  main.js
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  history.rs  hotkey.rs  keychain.rs  mod.rs  models.rs  paste.rs  permissions.rs  safety.rs  terminal.rs  tray.rs  updater.rs  usage.rs  window.rs  xai.rs
src-tauri/src/commands/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
src-tauri/src/terminal/: ax_reader.rs  browser.rs  context.rs  detect.rs  detect_linux.rs  detect_windows.rs  filter.rs  linux_reader.rs  mod.rs  process.rs  uia_reader.rs
src/components/: CommandInput.tsx  DestructiveBadge.tsx  HotkeyConfig.tsx  HotkeyRecorder.tsx  Overlay.tsx  ResultsArea.tsx
src/hooks/: useDrag.ts  useHistoryNavigation.ts  useKeyboard.ts  useWindowAutoSize.ts
src/store/: index.ts
src/utils/: platform.ts
(+285 files in other folders)
